@@ -1,3 +1,8 @@
+           Changes in BB version 2009.06-2 
+  
+  o Added try() wrapper in BBoptim and BBsolve calls from multiStart().  
+
+
            Changes in BB version 2009.06-1 
   
   o Added function multiStart to start BBoptim or BBsolve from multiple
